Remove lombok notation

--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,10 @@ buildscript {
 
 allprojects {
     repositories {
+        jcenter()
         mavenCentral()
         maven {
             url 'https://oss.sonatype.org/content/repositories/snapshots/'
-        }
-        flatDir {
-            dirs 'libs'
         }
     }
 }
