--- a/example/build.gradle
+++ b/example/build.gradle
@@ -31,6 +31,10 @@ android {
             minifyEnabled false
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
