update build tools

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,5 @@ VERSION_CODE=10
 MIN_SDK=8
 TARGET_SDK=22
 COMPILE_SDK=22
-BUILD_TOOLS_VERSION=23.0.0 rc3
+BUILD_TOOLS_VERSION=23.0.0
 APPLICATION_ID=com.klinker.android.link_builder_example
