--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -30,6 +30,19 @@
 
         </activity>
 
+        <activity
+            android:name="com.klinker.android.link_builder_example.ListActivity"
+            android:label="@string/app_name"
+            android:theme="@style/LinkBuilderExampleTheme">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
+
     </application>
 
 </manifest> 
