--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         </activity>
 
         <activity
-            android:name="com.klinker.android.link_builder_example.ListActivity"
+            android:name=".list_view_example.ListActivity"
             android:label="@string/app_name"
             android:theme="@style/LinkBuilderExampleTheme">
 
