--- a/example/build.gradle
+++ b/example/build.gradle
@@ -39,4 +39,8 @@ android {
 
 dependencies {
     compile project (':library')
+
+    compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
+    compile "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
+    compile "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
 }
