--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -17,11 +17,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.klinker.android.link_builder_example" >
 
-    <application android:label="@string/app_name" android:icon="@drawable/icon" >
+    <application android:label="@string/app_name" android:icon="@mipmap/ic_launcher" >
 
         <activity android:name="com.klinker.android.link_builder_example.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/LinkBuilderExampleTheme">
+            android:theme="@style/AppTheme">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,12 +33,12 @@
         <activity
             android:name=".list_view_example.ListActivity"
             android:label="@string/app_name"
-            android:theme="@style/LinkBuilderExampleTheme" />
+            android:theme="@style/AppTheme" />
 
         <activity
             android:name=".HtmlLinkExampleActivity"
             android:label="@string/app_name"
-            android:theme="@style/LinkBuilderExampleTheme" />
+            android:theme="@style/AppTheme" />
 
     </application>
 
