--- a/gradle.properties
+++ b/gradle.properties
@@ -14,14 +14,17 @@
 # limitations under the License.
 #
 
-VERSION_NAME=1.3.2
-VERSION_CODE=13
+VERSION_NAME=1.3.3
+VERSION_CODE=14
 
-MIN_SDK=8
-TARGET_SDK=23
-COMPILE_SDK=23
+MIN_SDK=9
+TARGET_SDK=25
+COMPILE_SDK=25
 
-BUILD_TOOLS_VERSION=23.0.2
+ANDROID_SUPPORT_VERSION=25.0.0
+
+ANDROID_GRADLE_VERSION=2.2.2
+BUILD_TOOLS_VERSION=25.0.0
 
 APPLICATION_ID=com.klinker.android.link_builder_example
 GROUP=com.klinkerapps
