--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${project.ANDROID_GRADLE_VERSION}"
@@ -25,6 +26,7 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        google()
         maven {
             url 'https://oss.sonatype.org/content/repositories/snapshots/'
         }
