update dependencies, bring in Kotlin support

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${project.ANDROID_GRADLE_VERSION}"
+        classpath "com.android.tools.build:gradle:$project.ANDROID_GRADLE_VERSION"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
     }
 }
 
@@ -27,8 +28,6 @@ allprojects {
         jcenter()
         mavenCentral()
         google()
-        maven {
-            url 'https://oss.sonatype.org/content/repositories/snapshots/'
-        }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
 }
