--- a/gradle.properties
+++ b/gradle.properties
@@ -14,14 +14,15 @@
 # limitations under the License.
 #
 
-VERSION_NAME=1.6.1
-VERSION_CODE=18
+VERSION_NAME=2.0.0
+VERSION_CODE=19
 
 MIN_SDK=14
 TARGET_SDK=27
 COMPILE_SDK=27
+KOTLIN_VERSION=1.2.30
 
-ANDROID_SUPPORT_VERSION=27.0.2
+ANDROID_SUPPORT_VERSION=27.1.0
 
 ANDROID_GRADLE_VERSION=3.0.1
 BUILD_TOOLS_VERSION=27.0.1
