--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,7 @@ allprojects {
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
 }
+
+subprojects {
+    tasks.withType(Javadoc).all { enabled = false }
+}
